Removed and added classes

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset = "utf-8">
+        <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0, user-scalable=1">
         <title>News</title>
         <link rel="stylesheet" href="styles/style.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="scripts/script.js"></script>
     </head>
     <body>
-        <h1>Today's News:</h1>
-        <h2 class="title"></h2>
-        <p class="id"></p>
-        <button> Press here to get today's news</button>
+        <div class="popup">
+            <ul id="mysqltojson">
+
+            </ul>
+        </div>
     </body>
 </html>
