Renamed a class to container

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
         <script src="scripts/script.js"></script>
     </head>
     <body>
-        <div class="popup">
-            <ul id="mysqltojson">
-
-            </ul>
+        <div class="container">
+            
         </div>
     </body>
 </html>
