Added a tag and styled it

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div class="container">
+            <h1>Today's News:</h1>
             
         </div>
     </body>
