--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <h1>Today's News:</h1>
-            
+            <h2 id="title"></h2>
         </div>
     </body>
 </html>
