--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <div class="container">
             <h1>Today's News:</h1>
             <h2 id="title"></h2>
+            <h5 id="date"></h5>
+            <p id="text"></p>
         </div>
     </body>
 </html>
